exports[`The ID5 Baton Lambda stack > matches the CODE snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction"
    ],
    "gu:cdk:version": "62.0.1"
  },
  "Parameters": {
    "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/dotcom-store.bucket"
    },
    "DistributionBucketName": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts"
    }
  },
  "Resources": {
    "AbTestingDeploymentLambdaServiceRoleC1809305": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deployment-lambda"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "CODE"
          }
        ]
      }
    },
    "AbTestingDeploymentLambdaServiceRoleDefaultPolicyC65D820D": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      },
                      "/frontend/CODE/ab-testing-deployment-lambda/lambda.zip"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/CODE/frontend/ab-testing-deployment-lambda"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/CODE/frontend/ab-testing-deployment-lambda/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing/CODE/fastly-api-token"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing/CODE/fastly-config"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "AbTestingDeploymentLambdaServiceRoleDefaultPolicyC65D820D",
        "Roles": [
          {
            "Ref": "AbTestingDeploymentLambdaServiceRoleC1809305"
          }
        ]
      }
    },
    "AbTestingDeploymentLambda3C53337B": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName"
          },
          "S3Key": "frontend/CODE/ab-testing-deployment-lambda/lambda.zip"
        },
        "Environment": {
          "Variables": {
            "STAGE": "CODE",
            "ARTIFACT_BUCKET_NAME": {
              "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STACK": "frontend",
            "APP": "ab-testing-deployment-lambda"
          }
        },
        "FunctionName": "ab-testing-deployment-lambda-CODE",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON"
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "AbTestingDeploymentLambdaServiceRoleC1809305",
            "Arn"
          ]
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deployment-lambda"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "CODE"
          }
        ],
        "Timeout": 30
      },
      "DependsOn": [
        "AbTestingDeploymentLambdaServiceRoleDefaultPolicyC65D820D",
        "AbTestingDeploymentLambdaServiceRoleC1809305"
      ]
    }
  }
}
`;

exports[`The ID5 Baton Lambda stack > matches the PROD snapshot 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuDistributionBucketParameter",
      "GuLambdaFunction"
    ],
    "gu:cdk:version": "62.0.1"
  },
  "Parameters": {
    "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/dotcom-store.bucket"
    },
    "DistributionBucketName": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/account/services/artifact.bucket",
      "Description": "SSM parameter containing the S3 bucket name holding distribution artifacts"
    }
  },
  "Resources": {
    "AbTestingDeploymentLambdaServiceRoleC1809305": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ],
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deployment-lambda"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "PROD"
          }
        ]
      }
    },
    "AbTestingDeploymentLambdaServiceRoleDefaultPolicyC65D820D": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "DistributionBucketName"
                      },
                      "/frontend/PROD/ab-testing-deployment-lambda/lambda.zip"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "ssm:GetParametersByPath",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/PROD/frontend/ab-testing-deployment-lambda"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:GetParameters",
                "ssm:GetParameter"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:aws:ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/PROD/frontend/ab-testing-deployment-lambda/*"
                  ]
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject*",
                "s3:GetBucket*",
                "s3:List*"
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      }
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing/PROD/fastly-api-token"
                  ]
                ]
              }
            },
            {
              "Action": [
                "ssm:DescribeParameters",
                "ssm:GetParameters",
                "ssm:GetParameter",
                "ssm:GetParameterHistory"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition"
                    },
                    ":ssm:eu-west-1:",
                    {
                      "Ref": "AWS::AccountId"
                    },
                    ":parameter/ab-testing/PROD/fastly-config"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "AbTestingDeploymentLambdaServiceRoleDefaultPolicyC65D820D",
        "Roles": [
          {
            "Ref": "AbTestingDeploymentLambdaServiceRoleC1809305"
          }
        ]
      }
    },
    "AbTestingDeploymentLambda3C53337B": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "DistributionBucketName"
          },
          "S3Key": "frontend/PROD/ab-testing-deployment-lambda/lambda.zip"
        },
        "Environment": {
          "Variables": {
            "STAGE": "PROD",
            "ARTIFACT_BUCKET_NAME": {
              "Ref": "SsmParameterValueaccountservicesdotcomstorebucketC96584B6F00A464EAD1953AFF4B05118Parameter"
            },
            "STACK": "frontend",
            "APP": "ab-testing-deployment-lambda"
          }
        },
        "FunctionName": "ab-testing-deployment-lambda-PROD",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogFormat": "JSON"
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "AbTestingDeploymentLambdaServiceRoleC1809305",
            "Arn"
          ]
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "App",
            "Value": "ab-testing-deployment-lambda"
          },
          {
            "Key": "gu:cdk:version",
            "Value": "62.0.1"
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/dotcom-rendering"
          },
          {
            "Key": "Stack",
            "Value": "frontend"
          },
          {
            "Key": "Stage",
            "Value": "PROD"
          }
        ],
        "Timeout": 30
      },
      "DependsOn": [
        "AbTestingDeploymentLambdaServiceRoleDefaultPolicyC65D820D",
        "AbTestingDeploymentLambdaServiceRoleC1809305"
      ]
    }
  }
}
`;
